meaningless edits again

--- a/system-home.html
+++ b/system-home.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" charset="utf-8">window.onload = function() {  setTimeout(function(){window.scrollTo(0, 1);}, 100);}</script> 
 	</head>
 <body>
-	<div id="header"><h1>UrbanSpectra home</h1></div>
+	<div id="header"><h1>UrbanSpectra Home</h1></div>
 <h1>current projects</h1>
 <ul>	<!--  IDEAL:  descript - www_link - ghub_link -->
 		<li><a href="sofiasys">Apple Laptop System Sales</a></li>
