updated sofiasys text to nycsys; gathered jquery accordion code

--- a/system-detail.html
+++ b/system-detail.html
@@ -15,7 +15,7 @@
 	<div id="header"><h1>urbanSpectra home</h1></div>
 <h1>current projects</h1>
 <ul>	<!--  IDEAL:  descript - www_link - ghub_link -->
-		<li><a href="sofiasys">Apple Laptop System Sales</a></li>
+		<li><a href="nycsys">Apple Laptop System Sales</a></li>
 		<li><a href="uiuikit">Mobile-Savvy CSS3 Library</a></li>
 		<li><a href="http://developers.facebook.com/docs/opengraph/">Facebook API + Group Migrations</a></li>
 		<li><a href="http://drupal.meetup.com/9">OSS CMS Drupal Meetup</a></li>
