--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-	<meta name="title" content="urbanSpectra"> 
-	<meta name="keywords" content="keywords openresume urbanspectra nyc meetup resume open source engineer developer mysql linux apache lamp cms drupal mobile iphone ios xcode android php bash oracle solaris ruby oltp no-sql data model case prototype replication network workbench lua warehouse datamart">
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-	<title>urbanspectra | nyc</title> 
-	<link rel="stylesheet" href="css/uiuikit3++.css" /> 
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" /> 
-<script type="text/javascript" charset="utf-8">window.onload = function() {  setTimeout(function(){window.scrollTo(0, 1);}, 100);}</script> 
-	</head>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
+	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<title>sofiasys | laptop systems</title>
+	<link rel="shortcut icon" href="images/_site_images/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="styles/iphone.css">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<script type="text/javascript" charset="utf-8">
+		window.onload = function() {
+		  setTimeout(function(){window.scrollTo(0, 1);}, 100);
+		}
+	</script>
+</head>
 <body>
-	<div id="header"><h1>UrbanSpectra Home</h1></div>
-<h1>current projects</h1>
-<ul>	<!--  IDEAL:  descript - www_link - ghub_link -->
-		<li><a href="sofiasys">Apple Laptop System Sales</a></li>
-		<li><a href="uiuikit">Mobile-Savvy CSS3 Library</a></li>
-		<li><a href="http://developers.facebook.com/docs/opengraph/">Facebook API + Group Migrations</a></li>
-		<li><a href="http://drupal.meetup.com/9">OSS CMS Drupal Meetup</a></li>
-		<li><a href="resume">Open Resume Project</a></li>
-		<li><a href="xgrid">Crossword Puzzle Tools</a></li>
-		<li><a href="lamp++">LAMP++ CMS</a></li>
-</ul>
-<h1>about</h1>
-<ul>
-		<li><a href="about_us.php">about urbanSpectra</a></li>
-</ul>
+<div id="header"><h1>sofiasys laptop systems</h1><!-- <a href="." id="backButton">home</a>--> </div>
+<h1>sofiasys home</h1>
+	<ul>
+        <li><a href="_inventory">nyc laptop inventory</a></li>
+	</ul>
+
+	<ul>
+        <li><a href="_about">about</a></li>
+        <li><a href="mailto:jjdonson@urbanspectra.com?Subject=general" target="_blank">contact</a></li>
+        <li><a href="_faq">faq</a></li>
+	</ul>
+<!-- WiredMinds eMetrics tracking with Enterprise Edition V5.4 START -->
+<script type='text/javascript' src='https://count.carrierzone.com/app/count_server/count.js'></script>
+<script type='text/javascript'><!--
+wm_custnum='4e0ef9a62f77668a';
+wm_page_name='index.html';
+wm_group_name='/services/webpages/u/r/urbanspectra.com/public/sofiasys';
+wm_campaign_key='campaign_id';
+wm_track_alt='';
+wiredminds.count();
+// -->
+</script>
+<!-- WiredMinds eMetrics tracking with Enterprise Edition V5.4 END -->
 </body>
 </html>
