are these my correctoins?

--- a/system-detail.html
+++ b/system-detail.html
@@ -1,31 +1,63 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-	<meta id="viewport" name="viewport" content="width=620; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-	<meta name="title" content="urbanSpectra"> 
-	<meta name="keywords" content="keywords openresume urbanspectra nyc meetup resume open source engineer developer mysql linux apache lamp cms drupal mobile iphone ios xcode android php bash oracle solaris ruby oltp no-sql data model case prototype replication network workbench lua warehouse datamart">
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-	<title>urbanspectra | nyc</title> 
-	<link rel="stylesheet" href="styles/iphone.css" /> 
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" /> 
-<script type="text/javascript" charset="utf-8">window.onload = function() {  setTimeout(function(){window.scrollTo(0, 1);}, 100);}</script> 
-	</head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<title>system laptop specs</title>
+	<link rel="stylesheet" href="css/uiuikit3++.css">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<script type="text/javascript" charset="utf-8">
+		window.onload = function() {
+		  setTimeout(function(){window.scrollTo(0, 1);}, 100);
+		}
+	</script>
+	<!-- for profile image -->
+	<style type="text/css" media="screen">
+		li.picture { background: #fff url(images/mbook_w.png) no-repeat !important; }
+	</style>
+	<!-- end line customization -->
+</head>
 <body>
-	<div id="header"><h1>urbanSpectra home</h1></div>
-<h1>current projects</h1>
-<ul>	<!--  IDEAL:  descript - www_link - ghub_link -->
-		<li><a href="nycsys">Apple Laptop System Sales</a></li>
-		<li><a href="uiuikit">Mobile-Savvy CSS3 Library</a></li>
-		<li><a href="http://developers.facebook.com/docs/opengraph/">Facebook API + Group Migrations</a></li>
-		<li><a href="http://drupal.meetup.com/9">OSS CMS Drupal Meetup</a></li>
-		<li><a href="resume">Open Resume Project</a></li>
-		<li><a href="xgrid">Crossword Puzzle Tools</a></li>
-		<li><a href="lamp++">LAMP++ CMS</a></li>
+	<div id="header">
+		<h1>nycsys systems</h1>
+		<a href="../.." id="backButton">home</a>
+	</div>
+<h2>Apple i7 MacBook Pro<br/>Late 2011, Flawless</h2>
+
+<a href="i7_about_info/info.png" target="_blank"><img src="i7_about_info/info_mobi.png" /></a>
+<br/>Click Photos For Full-Size
+<ul class="field">
+	<li><h3>CPU</h3>2.2 GHz Intel Core i7</li>
+    <li><h3>Screen</h3>15" Hi-Res LCD Color (1680 x 1050)</li>
+	<li><h3>RAM</h3>8 GB 1333 MHz DDR3</li>
+	<li><h3>Hard Disk</h3>500 GB</li>
+    <li><h3>AC Power</h3> Apple AC Power Supply</li>
+	<li><h3>OS</h3>OS X Mountain Lion</li>
+	<li><h3>Price</h3> $1199.00</li>
 </ul>
-<h1>about</h1>
+<a href="i7_about_info/about.png" target="_blank"><img src="i7_about_info/about_mobi.png" /></a>
+<a href="i7_about_info/sideview.jpg" target="_blank"><img src="i7_about_info/sideview_mobi.jpg" /></a>
 <ul>
-		<li><a href="about_us.php">about urbanSpectra</a></li>
+<li><a href="mailto:jjdonson@urbanspectra.com?Subject=MBPro%20i7%20$1200%20:%20http://www.urbanspectra.com/nycsys/_inventory/inv_i7/index.html">Contact Us About This System</a></li>
+<li><a href="index2.html">Apple System Profiler Model Specs</a></li>
+<li><a href="specs_i7.spx.zip">Apple System Profiler Spec File <img src="../../images/spx_icon.png"/></a></li>
 </ul>
-</body>
-</html>
+<font size=-1>
+<a href="../..">nycsys Home</a>
+.•.
+<a href="../../_inventory">Inventory</a>
+.•.
+<a href="../../_about">About</a>
+.•.
+<a href="../../_contact">Contact</a></font>
+<!-- WiredMinds eMetrics tracking with Enterprise Edition V5.4 START -->
+<script type='text/javascript' src='https://count.carrierzone.com/app/count_server/count.js'></script>
+<script type='text/javascript'><!--
+wm_custnum='4e0ef9a62f77668a';
+wm_page_name='index.html';
+wm_group_name='/services/webpages/u/r/urbanspectra.com/public/nycsys/_inventory/inv_i7';
+wm_campaign_key='campaign_id';
+wm_track_alt='';
+wiredminds.count();
+// -->
+</script>
+<!-- WiredMinds eMetrics tracking with Enterprise Edition V5.4 END -->
+</body></html>
