--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">	
 	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-	<title>sofiasys | laptop systems</title>
+	<title>nycsys | laptop systems</title>
 	<link rel="shortcut icon" href="images/_site_images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="styles/iphone.css">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -15,8 +15,8 @@
 	</script>
 </head>
 <body>
-<div id="header"><h1>sofiasys laptop systems</h1><!-- <a href="." id="backButton">home</a>--> </div>
-<h1>sofiasys home</h1>
+<div id="header"><h1>nycsys laptop systems</h1><!-- <a href="." id="backButton">home</a>--> </div>
+<h1>nycsys home</h1>
 	<ul>
         <li><a href="_inventory">nyc laptop inventory</a></li>
 	</ul>
@@ -31,7 +31,7 @@
 <script type='text/javascript'><!--
 wm_custnum='4e0ef9a62f77668a';
 wm_page_name='index.html';
-wm_group_name='/services/webpages/u/r/urbanspectra.com/public/sofiasys';
+wm_group_name='/services/webpages/u/r/urbanspectra.com/public/nycsys';
 wm_campaign_key='campaign_id';
 wm_track_alt='';
 wiredminds.count();
